terraform/routes_private.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.lab_vpc.id

  tags = {
    Name    = "lab-private-rt"
    Project = "cloud-transition-lab"
  }
}

resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}
